--- a/day-59/templates/post.html
+++ b/day-59/templates/post.html
@@ -4,7 +4,7 @@
     <!-- Page Header-->
     <header
       class="masthead"
-      style="background-image: url('assets/img/post-bg.jpg')"
+      style="background-image: url('static/assets/img/post-bg.jpg')"
     >
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -95,7 +95,7 @@
             <a href="#!"
               ><img
                 class="img-fluid"
-                src="assets/img/post-sample-image.jpg"
+                src="static/assets/img/post-sample-image.jpg"
                 alt="..."
             /></a>
             <span class="caption text-muted"
