--- a/day-60/templates/index.html
+++ b/day-60/templates/index.html
@@ -13,13 +13,14 @@
   </head>
   <body>
     <div class="container mt-5">
-      <form>
+      <form action="/login" method="post">
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
+          <label for="email">Email address</label>
           <input
             type="email"
+            name="email"
             class="form-control"
-            id="exampleInputEmail1"
+            id="email"
             aria-describedby="emailHelp"
             placeholder="Enter email"
           />
@@ -28,11 +29,12 @@
           >
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
+          <label for="password">Password</label>
           <input
             type="password"
+            name="password"
             class="form-control"
-            id="exampleInputPassword1"
+            id="password"
             placeholder="Password"
           />
         </div>
