--- a/day-60/templates/index.html
+++ b/day-60/templates/index.html
@@ -14,6 +14,7 @@
   <body>
     <div class="container mt-5">
       <form action="/login" method="post">
+        <!-- <form action="{{ url_for('receive_data') }}" method="post"> dynamically generated -->
         <div class="form-group">
           <label for="email">Email address</label>
           <input
