--- a/day-61/templates/login.html
+++ b/day-61/templates/login.html
@@ -1,13 +1,16 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html>
-	<head>
-		<title>Login</title>
-	</head>
-	<body>
-        <div class="container">
-		<h1>Login</h1>
-        <!-- This is where our form will go. -->
-        </div>
-	</body>
+  <head>
+    <title>Login</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Login</h1>
+      <form method="POST" action="{{ url_for('login') }}">
+        {{ form.csrf_token }} {{ form.email.label }} {{ form.email(size=30) }}
+        {{ form.password.label }} {{ form.password(size=30) }}
+      </form>
+    </div>
+  </body>
 </html>
