--- a/day-61/templates/login.html
+++ b/day-61/templates/login.html
@@ -7,9 +7,23 @@
   <body>
     <div class="container">
       <h1>Login</h1>
-      <form method="POST" action="{{ url_for('login') }}">
-        {{ form.csrf_token }} {{ form.email.label }} {{ form.email(size=30) }}
-        {{ form.password.label }} {{ form.password(size=30) }}
+      <form method="POST" action="{{ url_for('login') }}" novalidate>
+        <div>{{ form.csrf_token }}</div>
+        <div>
+          {{ form.email.label }} <br />
+          {{ form.email(size=30) }} <br />
+					{% for err in form.email.errors %}
+						<span style="color:red">{{ err }}</span>
+					{% endfor %}
+        </div>
+        <div>
+          {{ form.password.label }} <br />
+          {{ form.password(size=30) }} <br />
+					{% for err in form.password.errors %}
+						<span style="color:red">{{ err }}</span>
+					{% endfor %}
+        </div>
+        {{ form.submit }}
       </form>
     </div>
   </body>
