day-61 - Flask-WTForms: using Bootstrap-Flask

--- a/day-61/templates/denied.html
+++ b/day-61/templates/denied.html
@@ -2,15 +2,8 @@
 
 {% block title %}Access Denied{% endblock %}
 
-{% block styling %}
-  {{ super() }}
-  h1 {
-    color: red;
-  }
-{% endblock %}
-
 {% block content %}
-  <div class="container">
+  <div class="container py-4">
     <h1>Access Denied</h1>
     <iframe
       src="https://giphy.com/embed/1xeVd1vr43nHO"
