--- a/day-61/templates/base.html
+++ b/day-61/templates/base.html
@@ -6,12 +6,10 @@
     <title>{% block title %}{% endblock %}</title>
     <style>
       {% block styling %}
-        body {
-          background: purple;
-        }
 
       {% endblock %}
     </style>
+    {{ bootstrap.load_css() }}
   </head>
   <body>
     {% block content %}{% endblock %}
