--- a/day-61/templates/index.html
+++ b/day-61/templates/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Secrets</title>
-  </head>
-  <body>
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Welcome</h1>
-        <p>Are you ready to discover my secret?</p>
-        <a class="btn btn-primary btn-lg" href=" {{ url_for('login') }} "
-          >Login</a
-        >
-      </div>
+{% extends "base.html" %}
+
+{% block title %}Secrets{% endblock %}
+
+{% block content %}
+  <div class="bg-body-tertiary py-4">
+    <div class="container">
+      <h1>Welcome</h1>
+      <p>Are you ready to discover my secret?</p>
+      <a class="btn my-2 btn-primary btn-lg" href=" {{ url_for('login') }} "
+        >Login</a
+      >
     </div>
-  </body>
-</html>
+  </div>
+{% endblock %}
+
