--- a/day-61/templates/login.html
+++ b/day-61/templates/login.html
@@ -1,30 +1,27 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html>
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Login</h1>
-      <form method="POST" action="{{ url_for('login') }}" novalidate>
-        <div>{{ form.csrf_token }}</div>
-        <div>
-          {{ form.email.label }} <br />
-          {{ form.email(size=30) }} <br />
-          {% for err in form.email.errors %}
-          <span style="color: red">{{ err }}</span>
-          {% endfor %}
-        </div>
-        <div>
-          {{ form.password.label }} <br />
-          {{ form.password(size=30) }} <br />
-          {% for err in form.password.errors %}
-          <span style="color: red">{{ err }}</span>
-          {% endfor %}
-        </div>
-        {{ form.submit }}
-      </form>
-    </div>
-  </body>
-</html>
+{% block title %}Login{% endblock %}
+
+{% block content %}
+  <div class="container py-4">
+    <h1>Login</h1>
+    <form method="POST" action="{{ url_for('login') }}" novalidate>
+      <div>{{ form.csrf_token }}</div>
+      <div>
+        {{ form.email.label }} <br />
+        {{ form.email(size=30) }} <br />
+        {% for err in form.email.errors %}
+        <span style="color: red">{{ err }}</span>
+        {% endfor %}
+      </div>
+      <div class="mb-4">
+        {{ form.password.label }} <br />
+        {{ form.password(size=30) }} <br />
+        {% for err in form.password.errors %}
+        <span style="color: red">{{ err }}</span>
+        {% endfor %}
+      </div>
+      {{ form.submit }}
+    </form>
+  </div>
+{% endblock %}
