--- a/day-62/templates/cafes.html
+++ b/day-62/templates/cafes.html
@@ -1,22 +1,47 @@
-{% extends 'base.html' %}
-{% block title %}Restaurants{% endblock %}
-
-{% block content %}
+{% extends 'base.html' %} {% block title %}Restaurants{% endblock %} {% block
+content %}
 
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-
       <h1>All Cafes</h1>
 
-	  <table class="table table-dark table-striped table-hover">
-          <!-- This is where you will write the code to render a Bootstrap 
+      <table class="table table-dark table-striped table-hover">
+        <!-- This is where you will write the code to render a Bootstrap 
           Table that contains all the information from the 
           cafe-data.csv file. -->
-  	  </table>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First</th>
+              <th scope="col">Last</th>
+              <th scope="col">Handle</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td colspan="2">Larry the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+      </table>
 
       <p><a href="#">Return to index page</a></p>
-
     </div>
   </div>
 </div>
