--- a/day-62/templates/cafes.html
+++ b/day-62/templates/cafes.html
@@ -8,40 +8,29 @@ content %}
 
       <table class="table table-dark table-striped table-hover">
         <!-- This is where you will write the code to render a Bootstrap 
-          Table that contains all the information from the 
+          Table that contains all the information from the
           cafe-data.csv file. -->
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td colspan="2">Larry the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
+        {% for row in cafes %}
+        <tr>
+          {% for col in row %}
+            {% if 'https' in col %}
+              <td>
+                <a
+                  target="_blank"
+                  href="{{ col }}"
+                >
+                  Maps Link
+                </a>
+              </td>
+            {% else %}
+              <td>{{ col }}</td>
+            {% endif %}
+          {% endfor %}
+        </tr>
+        {% endfor %}
       </table>
 
-      <p><a href="#">Return to index page</a></p>
+      <p><a href="{{ url_for('home') }}">Return to index page</a></p>
     </div>
   </div>
 </div>
