day-63 - Init project Virtual Bookshelf: making the website work

--- a/day-62/templates/index.html
+++ b/day-62/templates/index.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %} {% block title %}Coffee and Wifi{% endblock %} {%
-block content %}
+{% extends 'base.html' %}
+
+{% block title %}Coffee and Wifi{% endblock %}
+
+{% block content %}
 <div class="jumbotron text-center">
   <div class="container">
     <h1 class="display-4">☕️ Coffee & Wifi 💻</h1>
