--- a/day-62/templates/add.html
+++ b/day-62/templates/add.html
@@ -3,17 +3,18 @@
 <!--Don't forget your import here-->
 {% from 'bootstrap5/form.html' import render_form %}
 
-{% block title %}Add A New Cafe{% endblock %} {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8">
-      <h1>Add a new cafe into the database</h1>
+{% block title %}Add A New Cafe{% endblock %}
 
-      <!-- This is where your WTForm will go -->
-      {{ render_form(form)}}
-      <p class="space-above"><a href="#">See all cafes</a></p>
+{% block content %}
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8">
+        <h1>Add a new cafe into the database</h1>
+
+        <!-- This is where your WTForm will go -->
+        {{ render_form(form)}}
+        <p class="space-above"><a href="#">See all cafes</a></p>
+      </div>
     </div>
   </div>
-</div>
-
 {% endblock %}
