--- a/day-63/templates/index.html
+++ b/day-63/templates/index.html
@@ -7,11 +7,15 @@
   <body>
     <h1>My Library</h1>
     <ul>
-      {% for book in books %}
-        <li>
-          {{ book.name }} - {{ book.author }} - {{ rating }}/10
-        </li>
-      {% endfor %}
+      {% if books|length == 0 %}
+        <p>Library is empty.</p>
+      {% else %}
+        {% for book in books %}
+          <li>
+            {{ book.title }} - {{ book.author }} - {{ rating }}/10
+          </li>
+        {% endfor %}
+      {% endif %}
     </ul>
 
     <a href="{{ url_for('add') }}">Add New Book</a>
