--- a/day-64/templates/edit.html
+++ b/day-64/templates/edit.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 
-{% block title %}Edit Movies{% endblock %}
+{% from 'bootstrap5/form.html' import render_form %}
+
+{% block title %}
+  Edit Movies
+{% endblock %}
 
 {% block content %}
-<div class="content">
-  <h1 class="heading">Movie Title</h1>
-    <p class="description">Edit Movie Rating</p>
+  <div class="container pt-5">
+    <div class="content">
+      <h1 class="heading">{{ movie.title }}</h1>
+      <p class="description">Edit Movie Rating</p>
+      {{ render_form(form) }}
+    </div>
   </div>
 {% endblock %}
