--- a/day-64/templates/index.html
+++ b/day-64/templates/index.html
@@ -20,7 +20,7 @@ block content %}
         <p class="review">"{{ movie.review }}"</p>
         <p class="overview">{{ movie.description }}</p>
         <a href="{{ url_for('edit', id=movie.id) }}" class="button">Update</a>
-        <a href="#" class="button delete-button">Delete</a>
+        <a href="{{ url_for('delete', id=movie.id) }}" class="button delete-button">Delete</a>
       </div>
     </div>
   </div>
