day-64 - My top 100 Movies Website: be able to add new movies via de add page

--- a/day-63/templates/index.html
+++ b/day-63/templates/index.html
@@ -9,13 +9,15 @@
     <ul>
       {% if books|length == 0 %}
       <p>Library is empty.</p>
-      {% else %} {% for book in books %}
-      <li>
-        <a href="{{ url_for('delete', id=book.id) }}">Delete</a>
-        {{ book.title }} - {{ book.author }} - {{ book.rating }}/10
-        <a href="{{ url_for('edit', num=book.id) }}">Edit Rating</a>
-      </li>
-      {% endfor %} {% endif %}
+      {% else %}
+        {% for book in books %}
+          <li>
+            <a href="{{ url_for('delete', id=book.id) }}">Delete</a>
+            {{ book.title }} - {{ book.author }} - {{ book.rating }}/10
+            <a href="{{ url_for('edit', num=book.id) }}">Edit Rating</a>
+          </li>
+        {% endfor %}
+      {% endif %}
     </ul>
 
     <a href="{{ url_for('add') }}">Add New Book</a>
