--- a/day-64/templates/select.html
+++ b/day-64/templates/select.html
@@ -3,11 +3,15 @@
 {% block title %}Select Movie{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container pt-5">
     <h1 class="heading">Select Movie</h1>
-  <p>
-    <a href="#"> MOVIE TITLE - MOVIE RELEASE DATE</a>
-  </p>
+  <ul>
+    {% for option in options %}
+      <li>
+        <a href="{{ url_for('find', id=option.id) }}">{{ option.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
 
 </div>
 {% endblock %}
