--- a/day-64/templates/add.html
+++ b/day-64/templates/add.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
+{% from 'bootstrap5/form.html' import render_form %}
+
 {% block title %}Add Movie{% endblock %}
 
 {% block content %}
-<div class="content">
-    <h1 class="heading">Add a Movie</h1>
-</div>
+    <div class="container pt-5">
+        <div class="content">
+            <h1 class="heading">Add a Movie</h1>
+            {{ render_form(form) }}
+        </div>
+    </div>
 {% endblock %}
