--- a/day-68/templates/register.html
+++ b/day-68/templates/register.html
@@ -1,14 +1,16 @@
+{% from 'bootstrap5/form.html' import render_form %}
 {% extends "base.html" %}
 {% block content %}
 
 <div class="box">
 	<h1>Register</h1>
-    <form action="{{ url_for('register') }}" method="post">
+    <!-- <form action="{{ url_for('register') }}" method="post">
     	<input type="text" name="name" placeholder="Name" required="required" />
 		<input type="email" name="email" placeholder="Email" required="required" />
         <input type="password" name="password" placeholder="Password" required="required" />
         <button type="submit" class="btn btn-primary btn-block btn-large">Sign me up.</button>
-    </form>
+    </form> -->
+    {{ render_form(form) }}
 </div>
 
 {% endblock %}
