--- a/day-69/templates/register.html
+++ b/day-69/templates/register.html
@@ -1,5 +1,8 @@
-{% from "bootstrap5/form.html" import render_form %} {% block content %} {%
-include "header.html" %}
+{% from "bootstrap5/form.html" import render_form %}
+
+{% block content %}
+
+{% include "header.html" %}
 
 <!-- Page Header -->
 <header
@@ -23,9 +26,12 @@ include "header.html" %}
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <!--TODO: render your registration form here-->
+        {{ render_form(form) }}
       </div>
     </div>
   </div>
 </main>
 
-{% include "footer.html" %} {% endblock %}
+{% include "footer.html" %}
+
+{% endblock %}
