--- a/day-69/templates/login.html
+++ b/day-69/templates/login.html
@@ -1,5 +1,8 @@
-{% from "bootstrap5/form.html" import render_form %} {% block content %} {%
-include "header.html" %}
+{% from "bootstrap5/form.html" import render_form %}
+
+{% block content %}
+
+{% include "header.html" %}
 
 <!-- Page Header -->
 <header
@@ -22,11 +25,23 @@ include "header.html" %}
   <div class="container">
     <div class="row">
       <!-- TODO: add a flash message here for users registering twice -->
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+            <div class="col-lg-8 col-md-10 mx-auto">
+              <p class="flash">{{ message }}</p>
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
       <div class="col-lg-8 col-md-10 mx-auto">
         <!--TODO: render login form here-->
+        {{ render_form(form) }}
       </div>
     </div>
   </div>
 </main>
 
-{% include "footer.html" %} {% endblock %}
+{% include "footer.html" %}
+
+{% endblock %}
