day-69 - Blog Capstone Project: protect routes

--- a/day-69/templates/post.html
+++ b/day-69/templates/post.html
@@ -26,14 +26,15 @@
       <div class="col-md-10 col-lg-8 col-xl-7">
         {{ post.body|safe }}
         <!--TODO: Only show Edit Post button if user id is 1 (admin user) -->
-        <div class="d-flex justify-content-end mb-4">
-          <a
-            class="btn btn-primary float-right"
-            href="{{url_for('edit_post', post_id=post.id)}}"
-            >Edit Post</a
-          >
-        </div>
-
+        {% if is_admin %}
+          <div class="d-flex justify-content-end mb-4">
+            <a
+              class="btn btn-primary float-right"
+              href="{{url_for('edit_post', post_id=post.id)}}"
+              >Edit Post</a
+            >
+          </div>
+        {% endif %}
         <!-- Comments Area -->
         <!-- TODO: Add a CKEditor for commenting below -->
         <div class="comment">
