--- a/day-69/templates/index.html
+++ b/day-69/templates/index.html
@@ -29,11 +29,11 @@
         </a>
         <p class="post-meta">
           Posted by
-          <a href="#">{{post.author}}</a>
+          <a href="#">{{post.author.name}}</a>
           on {{post.date}}
           <!-- TODO: Only show delete button if user id is 1 (admin user) -->
           {% if is_admin %}
-            <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
+          <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
           {% endif %}
         </p>
       </div>
@@ -44,13 +44,13 @@
       <!-- New Post -->
       <!-- TODO: Only show Create Post button if user id is 1 (admin user) -->
       {% if is_admin %}
-        <div class="d-flex justify-content-end mb-4">
-          <a
-            class="btn btn-primary float-right"
-            href="{{url_for('add_new_post')}}"
-            >Create New Post</a
-          >
-        </div>
+      <div class="d-flex justify-content-end mb-4">
+        <a
+          class="btn btn-primary float-right"
+          href="{{url_for('add_new_post')}}"
+          >Create New Post</a
+        >
+      </div>
       {% endif %}
       <!-- Pager-->
       <div class="d-flex justify-content-end mb-4">
