--- a/day-69/templates/post.html
+++ b/day-69/templates/post.html
@@ -1,3 +1,5 @@
+{% from "bootstrap5/form.html" import render_form %}
+
 {% include "header.html" %}
 
 <!-- Page Header-->
@@ -10,7 +12,7 @@
           <h2 class="subheading">{{ post.subtitle }}</h2>
           <span class="meta"
             >Posted by
-            <a href="#">{{ post.author }}</a>
+            <a href="#">{{ post.author.name }}</a>
             on {{ post.date }}
           </span>
         </div>
@@ -39,16 +41,20 @@
         <!-- TODO: Add a CKEditor for commenting below -->
         <div class="comment">
           <!-- TODO: Show all the comments on a post -->
-          <ul class="commentList">
-            <li>
-              <div class="commenterImage">
-                <img src="../static/assets/img/default-profile.jpg" />
-              </div>
-              <div class="commentText">
-                <p>Some comment</p>
-                <span class="date sub-text">comment author name</span>
-              </div>
-            </li>
+          {{ ckeditor.load() }}
+          {{ render_form(form) }}
+          <ul class="commentList mt-3">
+            {% for comment in comments %}
+              <li class="mb-2">
+                <div class="commenterImage">
+                  <img src="{{  comment.user.email | gravatar }}" />
+                </div>
+                <div class="commentText">
+                  <p>{{ comment.text|safe }}</p>
+                  <span class="date sub-text">{{ comment.user.name }}</span>
+                </div>
+              </li>
+            {% endfor %}
           </ul>
         </div>
       </div>
